Fixed table overflow

--- a/style/custom.css
+++ b/style/custom.css
@@ -14,6 +14,14 @@ main {
     width: 50%;
 }
 
+td {
+    white-space: normal !important;
+    word-wrap: break-word;
+}
+table {
+    table-layout: fixed;
+}
+
 .wrapped {
     white-space: pre;           /* CSS 2.0 */
     white-space: pre-wrap;      /* CSS 2.1 */
